--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=activity-service
-server.port=8089
+server.port=${PORT:8089}
+
 
 # Swagger OpenAPI
 springdoc.api-docs.enabled=true
@@ -15,7 +16,7 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # Eureka (if you have discovery-server in docker-compose)
-eureka.client.service-url.defaultZone=http://discovery-server:8761/eureka/
+eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
 
 # Kafka (inside docker network, service name = broker)
 spring.kafka.bootstrap-servers=broker:9092
