--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,6 +65,16 @@ services:
     volumes:
       - mysql_data:/var/lib/mysql
 
+  activity-service:
+    build: ./activity-service
+    container_name: activity-service
+    depends_on:
+      - mysql
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/activity_db
+    ports:
+      - "8089:8089"
+
 
 volumes:
   mysql_data:
