--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -66,7 +66,7 @@ services:
       - mysql_data:/var/lib/mysql
 
   activity-service:
-    build: ./activity-service
+    build: .
     container_name: activity-service
     depends_on:
       - mysql
