--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@ spring.application.name=activity-service
 server.port=${PORT:8089}
 
 
+
+
+
 # Swagger OpenAPI
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 # DB (MySQL is inside same compose, service name = mysql)
-spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
+spring.datasource.url=jdbc:mysql://localhost:3307/activity_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -19,7 +22,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
 
 # Kafka (inside docker network, service name = broker)
-spring.kafka.bootstrap-servers=broker:9092
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
 
 # Kafka Producer with Avro
@@ -27,7 +30,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
 # Schema Registry (inside docker network, service name = schema-registry)
-spring.kafka.properties.schema.registry.url=http://schema-registry:8081
+spring.kafka.properties.schema.registry.url=http://localhost:8085
 
 # Topics
 spring.kafka.topic.orderPlaced=postMessageToNewRequestKafkaTopic
