new app and docker properties

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,9 +22,12 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      # Listen on all interfaces inside Docker
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092
+      # Advertise localhost to outside clients (Gitpod/Spring app)
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.0
