--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+spring.kafka.bootstrap-servers=9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
+//spring.kafka.properties.schema.registry.url=http://localhost:8085
 # Eureka (if you have discovery-server in docker-compose)
 eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
 
 # Kafka (inside docker network, service name = broker)
-spring.kafka.bootstrap-servers=localhost:9092
+//spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
 
 # Kafka Producer with Avro
