new app and docker properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,12 +18,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.kafka.bootstrap-servers=9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
-//spring.kafka.properties.schema.registry.url=http://localhost:8085
+spring.kafka.properties.schema.registry.url=http://localhost:8085
 # Eureka (if you have discovery-server in docker-compose)
 eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
 
+#spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
+#spring.kafka.bootstrap-servers=broker:29092
+#spring.kafka.properties.schema.registry.url=http://schema-registry:8081
+
+
+
 # Kafka (inside docker network, service name = broker)
-//spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
 
 # Kafka Producer with Avro
@@ -31,7 +37,7 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
 # Schema Registry (inside docker network, service name = schema-registry)
-spring.kafka.properties.schema.registry.url=http://localhost:8085
+#spring.kafka.properties.schema.registry.url=http://localhost:8085
 
 # Topics
 spring.kafka.topic.orderPlaced=postMessageToNewRequestKafkaTopic
