--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,16 +17,17 @@ services:
     container_name: broker
     ports:
       - "9092:9092"
+      - "29092:29092"
     depends_on:
       - zookeeper
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      # Listen on all interfaces inside Docker
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
-      # Advertise localhost to outside clients (Gitpod/Spring app)
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
 
 
   schema-registry:
