new app and docker properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.kafka.bootstrap-servers=9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
-spring.kafka.properties.schema.registry.url=http://localhost:8085
+spring.kafka.properties.schema.registry.url=https://8085-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io
 # Eureka (if you have discovery-server in docker-compose)
 eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
+#spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
 #spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
 #spring.kafka.bootstrap-servers=broker:29092
