--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,16 +32,15 @@ services:
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.0
-    hostname: schema-registry
     container_name: schema-registry
     depends_on:
       - broker
     ports:
-      - "8085:8081"
+      - "8085:8081"  # host:container
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker:9092
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: PLAINTEXT://broker:29092
 
   kafka-ui:
     container_name: kafka-ui
