--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.kafka.bootstrap-servers=9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
-spring.kafka.properties.schema.registry.url=https://8085-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io
+#spring.kafka.bootstrap-servers=9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
+#spring.kafka.properties.schema.registry.url=https://8085-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io
 # Eureka (if you have discovery-server in docker-compose)
 eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
 #spring.kafka.properties.schema.registry.url=http://schema-registry:8081
@@ -27,6 +27,8 @@ eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.r
 #spring.kafka.bootstrap-servers=broker:29092
 #spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
+spring.kafka.bootstrap-servers=broker:29092
+spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
 
 # Kafka (inside docker network, service name = broker)
