--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 #new deployment code
-version: '3.8'
+version: '2'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:7.5.0
@@ -15,20 +15,18 @@ services:
     image: confluentinc/cp-kafka:7.5.0
     hostname: broker
     container_name: broker
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
       - "29092:29092"
-    depends_on:
-      - zookeeper
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
-
 
   schema-registry:
     image: confluentinc/cp-schema-registry:7.5.0
@@ -36,7 +34,7 @@ services:
     depends_on:
       - broker
     ports:
-      - "8085:8081"  # host:container
+      - "8085:8081"
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
@@ -52,7 +50,7 @@ services:
       - schema-registry
     environment:
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: broker:29092
       KAFKA_CLUSTERS_0_SCHEMAREGISTRY: http://schema-registry:8081
       DYNAMIC_CONFIG_ENABLED: 'true'
 
@@ -64,10 +62,9 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: validation_db
     ports:
-      - "3307:3306"  # external 3307 to avoid conflicts
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-
 
 volumes:
   mysql_data:
