--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,56 +1,37 @@
+# Activity Service identity
 spring.application.name=activity-service
 server.port=${PORT:8089}
 
-
-
-
-
-# Swagger OpenAPI
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-
-# DB (MySQL is inside same compose, service name = mysql)
-spring.datasource.url=jdbc:mysql://localhost:3307/activity_db
+# MySQL (use the container service name inside docker network)
+spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.kafka.bootstrap-servers=9092-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io:9092
-#spring.kafka.properties.schema.registry.url=https://8085-souravjadho-activityser-vn233j9jirm.ws-us121.gitpod.io
-# Eureka (if you have discovery-server in docker-compose)
-eureka.client.service-url.defaultZone=https://eureka-server-production-31ff.up.railway.app/eureka/
-#spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
-#spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
-#spring.kafka.bootstrap-servers=broker:29092
-#spring.kafka.properties.schema.registry.url=http://schema-registry:8081
+# Eureka (hosted on Railway)
+eureka.client.service-url.defaultZone=https://eureka-server-production-b348.up.railway.app/eureka/
 
+# Validation service (hosted on Railway)
+validation.service.url=https://validation-service-production-024e.up.railway.app/v1/risk/validation
+
+# Kafka (inside Gitpod docker network)
 spring.kafka.bootstrap-servers=broker:29092
 spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
-
-# Kafka (inside docker network, service name = broker)
-#spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
-
-# Kafka Producer with Avro
+# Kafka producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
-# Schema Registry (inside docker network, service name = schema-registry)
-#spring.kafka.properties.schema.registry.url=http://localhost:8085
-
-# Topics
+# Kafka topic
+spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
 spring.kafka.topic.orderPlaced=postMessageToNewRequestKafkaTopic
 
-# Debug logs
+# Debugging
 logging.level.org.apache.kafka=DEBUG
 logging.level.org.springframework.kafka=DEBUG
 
-# Kafka auto-create topics
-KAFKA_AUTO_CREATE_TOPICS_ENABLE=true
 
 
 
