--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=activity-service
 server.port=${PORT:8089}
 
-# MySQL (use the container service name inside docker network)
+# MySQL (use docker network service name)
 spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
 spring.datasource.username=root
 spring.datasource.password=root
@@ -10,13 +10,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Eureka (hosted on Railway)
-eureka.client.service-url.defaultZone=https://eureka-server-production-b348.up.railway.app/eureka/
+# Eureka (public URL of Eureka server on Gitpod)
+eureka.client.service-url.defaultZone=http://8761-souravjadho-eurekaserve-5uhm254inif.ws-us121.gitpod.io/eureka/
 
-# Validation service (hosted on Railway)
-validation.service.url=https://validation-service-production-024e.up.railway.app/v1/risk/validation
+# Validation service (public URL)
+validation.service.url=http://8989-souravjadho-validations-e5gjpx2oi3g.ws-us121.gitpod.io/v1/risk/validation
 
-# Kafka (inside Gitpod docker network)
+# Kafka
 spring.kafka.bootstrap-servers=broker:29092
 spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
@@ -28,10 +28,9 @@ spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroS
 spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
 spring.kafka.topic.orderPlaced=postMessageToNewRequestKafkaTopic
 
-# Debugging
+# Logging for debug
 logging.level.org.apache.kafka=DEBUG
 logging.level.org.springframework.kafka=DEBUG
-
 
 
 
