--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=activity-service
 server.port=${PORT:8089}
 
 # MySQL (use docker network service name)
-spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
+spring.datasource.url=jdbc:mysql://localhost:3307/activity_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
