--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,17 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
+spring.kafka.bootstrap-servers=192.168.99.100:9092
+spring.kafka.properties.schema.registry.url=http://192.168.99.100:8085
 # Eureka (public URL of Eureka server on Gitpod)
 eureka.client.service-url.defaultZone=http://8761-souravjadho-eurekaserve-5uhm254inif.ws-us121.gitpod.io/eureka/
 
 # Validation service (public URL)
 validation.service.url=http://8989-souravjadho-validations-e5gjpx2oi3g.ws-us121.gitpod.io/v1/risk/validation
 
-# Kafka
-spring.kafka.bootstrap-servers=broker:29092
-spring.kafka.properties.schema.registry.url=http://schema-registry:8081
+## Kafka
+#spring.kafka.bootstrap-servers=broker:29092
+#spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
 # Kafka producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
