--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,38 +1,44 @@
-# Activity Service identity
+# ===============================
+# Activity Service Configuration
+# ===============================
 spring.application.name=activity-service
 server.port=${PORT:8089}
 
-# MySQL (use docker network service name)
-spring.datasource.url=jdbc:mysql://localhost:3307/activity_db
+# ===============================
+# MySQL (Docker service name)
+# ===============================
+spring.datasource.url=jdbc:mysql://mysql:3306/activity_db
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.kafka.bootstrap-servers=192.168.99.100:9092
-spring.kafka.properties.schema.registry.url=http://192.168.99.100:8085
-# Eureka (public URL of Eureka server on Gitpod)
-eureka.client.service-url.defaultZone=http://8761-souravjadho-eurekaserve-5uhm254inif.ws-us121.gitpod.io/eureka/
 
-# Validation service (public URL)
-validation.service.url=http://8989-souravjadho-validations-e5gjpx2oi3g.ws-us121.gitpod.io/v1/risk/validation
+# ===============================
+# Kafka + Schema Registry
+# ===============================
+spring.kafka.bootstrap-servers=broker:29092
+spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
-## Kafka
-#spring.kafka.bootstrap-servers=broker:29092
-#spring.kafka.properties.schema.registry.url=http://schema-registry:8081
-
-# Kafka producer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 
-# Kafka topic
 spring.kafka.template.default-topic=postMessageToNewRequestKafkaTopic
 spring.kafka.topic.orderPlaced=postMessageToNewRequestKafkaTopic
 
-# Logging for debug
 logging.level.org.apache.kafka=DEBUG
 logging.level.org.springframework.kafka=DEBUG
 
+# ===============================
+# Eureka (still using Gitpod public URL)
+# ===============================
+eureka.client.service-url.defaultZone=http://8761-souravjadho-eurekaserve-5uhm254inif.ws-us121.gitpod.io/eureka/
+
+# ===============================
+# Validation service (external)
+# ===============================
+validation.service.url=http://8989-souravjadho-validations-e5gjpx2oi3g.ws-us121.gitpod.io/v1/risk/validation
+KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
 
 #old working code
