--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # ===============================
 # Kafka + Schema Registry
 # ===============================
-spring.kafka.bootstrap-servers=broker:29092
+spring.kafka.bootstrap-servers=broker:9092
 spring.kafka.properties.schema.registry.url=http://schema-registry:8081
 
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
@@ -38,7 +38,7 @@ eureka.client.service-url.defaultZone=http://8761-souravjadho-eurekaserve-5uhm25
 # Validation service (external)
 # ===============================
 validation.service.url=http://8989-souravjadho-validations-e5gjpx2oi3g.ws-us121.gitpod.io/v1/risk/validation
-KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+#KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
 
 
 #old working code
